tests/transpiler/x/hs/membership.hs
-- Generated by Mochi transpiler v0.10.31 on 2025-07-19 19:46:27 GMT+7
nums = [1, 2, 3]

main :: IO ()
main = do
    print (2 in nums)
    print (4 in nums)
